--- a/styles/style.css
+++ b/styles/style.css
@@ -18,20 +18,26 @@
 {
   display: block;
   width:70%;
-  margin: 40px auto;
-  /*display:flex;
-  justify-content: center;*/
+  margin: 100px auto;
+  /*margin-top: 100px;*/
+  position: relative;
+  top: 60px;
+
 }
 
 #input_box
 {
   display: block;
-  margin:  20px auto;
+  margin: auto;
+  position: relative;
+  top: 25px;
 }
 
 #buttons
 {
   text-align: center;
+  position: relative;
+  top: 40px;
 }
 
 button
@@ -44,4 +50,6 @@ footer
 {
   margin-top: 30px;
   text-align: center;
+  position: relative;
+  top: 20px;
 }
